--- a/index.html
+++ b/index.html
@@ -3,35 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <link rel="stylesheet" href="./index.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Order summary card</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
-
-  Order Summary
-
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
-  
+<div class="main">
+  <div class="card">
+    <img class="illustration" src="./images/illustration-hero.svg">
+    <div class="content">
+      <div class="order-summary">
+        <h2>Order Summary</h2>
+        <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
+      </div>
+      <div class="plan">
+        <img src="./images/icon-music.svg">
+        <div class="plan-name-and-price">
+          <h4>Annual Plan</h4>
+          <p>$59.99/year</p>
+        </div>
+        <a href="#">Change</a>
+      </div>
+      <div class="payment">
+        <button class="button pay">Proceed to Payment</button>
+        <button class="button cancel">Cancel Order</button>
+      </div>
+    </div>
+  </div>
+</div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Durgesh kumar rai</a>.
   </div>
 </body>
 </html>
