--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Durgesh kumar rai</a>.
+    Coded by <a href="#">Niloy Khastagir</a>.
   </div>
 </body>
 </html>
