--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   </style>
 </head>
 <body>
-<div class="main">
+<main class="main">
   <div class="card">
     <img class="illustration" src="./images/illustration-hero.svg">
-    <div class="content">
-      <div class="order-summary">
+    <section class="content">
+      <header class="order-summary">
         <h2>Order Summary</h2>
         <p>You can now listen to millions of songs, audiobooks, and podcasts on any device anywhere you like!</p>
-      </div>
+      </header>
       <div class="plan">
         <img src="./images/icon-music.svg">
         <div class="plan-name-and-price">
@@ -34,12 +34,12 @@
         <button class="button pay">Proceed to Payment</button>
         <button class="button cancel">Cancel Order</button>
       </div>
-    </div>
+    </section>
   </div>
-</div>
-  <div class="attribution">
+</main>
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Niloy Khastagir</a>.
-  </div>
+  </footer>
 </body>
 </html>
